Header fixed, no more extra margin, used vertical-align:bottom; to fix it. added social buttons to bottom audio player, and also download links to application. Audio controls have also been arranged. Slider now has an overlay

--- a/css/audioplayer.css
+++ b/css/audioplayer.css
@@ -1,30 +1,72 @@
 @import "http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css";
 
+/*Instagram copied css*/
+
 .audio-player{
   display: block;
   width: 100%;
-  height: 30px;
+  height: 40px;
 }
 
-.audio-player > .artwork{
+.audio-player .artwork{
+  position: relative;
   display: inline-block;
-  width: 30px;
-  height: 100%;
+  height: 40px;
+  width: 40px;
+  background: #fff;
+  vertical-align: top;
 }
 
 .audio-player .artwork > img{
   width: 100%;
+  height: 100%;
 }
 
-.audio-player > .artwork-text{
+.audio-player .artwork-text{
+  position: relative;
   display: inline-block;
-  margin: 0px 5px;
-  width: 20%;
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 40%;
+  height: 40px;
+  vertical-align: top;
 }
+
 .audio-player > .controls{
-  display: inline-block;
+  display: block;
 }
+
+.controls-icon{
+  position: relative;
+  display: inline-block;
+  height: 40px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.right{
+  float: right;
+}
+
 
 .audio-player > .controls i{
-  font-size: 1.3em;
+  font-size: 2em;
+  /*vertical-align: middle;*/
+}
+
+.social-wrapper , .badges-wrapper{
+  max-height: 40px;
+}
+
+.audio-player img{
+  height: 40px;
+
+}
+
+.social-wrapper img{
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.twitter-logo img{
+  background-color: #292f33;
 }
