--- a/css/layout.css
+++ b/css/layout.css
@@ -86,3 +86,38 @@
 .upcoming-name{
   display: block;
 }
+.overlay{
+  background: #000000;
+  opacity: 0.3;
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 300;
+}
+.banner{
+  position: relative;
+  overflow: hidden;
+  margin-top: 55px;
+  padding-bottom: 20px;
+}
+.slick-dots{
+  z-index: 301;
+}
+.slick-prev, .slick-next{
+  z-index: 301;
+  height: 40px !important;
+  width: 40px !important;
+
+}
+.slick-prev::before, .slick-next::before{
+    font-size: 40px !important;
+}
+.slick-prev{
+  left:50px !important;
+
+}
+.slick-next{
+  right:25px !important;
+}
